# rrl_cli_reader

./: Cargo.toml  README.md  build.rs  fiction_list.txt
.github/workflows/: apisec-scan.yml  devskim.yml
src/: extra.rs  filter.rs  getting.rs  main.rs  search.rs
