[package]
name = "rrl_cli_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
confy = "0.5.1"
crossterm = "0.27.0"
reqwest ={version =  "0.11.23" , features = ["blocking"] }
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
